--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
    <h1>list of the projects that i have done in CSE 6060 NLP lab </h1>
    <p> Mahidhar reddy CH 19MAI0005 </p>
    <img src="https://static.javatpoint.com/tutorial/nlp/images/what-is-nlp.png" alt="image of NLP" width="200"/>
+   <ul>
+     <li> LAB 1 </li>
+     
   </body>
 </html>
