--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
    <img src="https://static.javatpoint.com/tutorial/nlp/images/what-is-nlp.png" alt="image of NLP" width="200"/>
    <ul>
      <li> LAB 1 </li>
+     <li> LAB 2 </li>
+     <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/NLP_12_06.ipynb"> LAB 3 </a> </li>
    </ul>
      
   </body>
