--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
    <p> Mahidhar reddy CH 19MAI0005 </p>
    <img src="https://static.javatpoint.com/tutorial/nlp/images/what-is-nlp.png" alt="image of NLP" width="200"/>
    <ul>
-     <li> LAB 1 </li>
-     <li> LAB 2 </li>
+     <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/NLP_LAB%201.ipynb"> LAB 1 </a> </li>
+     <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/NLP_LAB%202%20_%2029%2005.ipynb"> LAB 2 </a> </li>
      <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/NLP_12_06.ipynb"> LAB 3 </a> </li>
    </ul>
-     
   </body>
 </html>
