--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    <h3> List of HOME WORKS </h3>
    
    <ul>
-     <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/HW%201_%20CFD.ipynb" target="_blank"> HW 1 : Conditional Frequency </a> </li>
+     <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/HW%201_%20CFD.ipynb" target="_blank"> HW 1 : CONDITIONAL FREQUENCY </a> </li>
      
      <li><a href = "https://github.com/mahidharreddych/nlplab/blob/master/COCA%20Corpus.pdf" target="_blank"> HW 2 : EXPLORING COCA </a> </li>
      
